# openapi.yaml
@@ -98,6 +98,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+
   /account/{login}/transfer:
     post:
       tags:
@@ -135,6 +136,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+
   /accounts:
     get:
       tags:
@@ -224,6 +226,37 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
+  /notify:
+    post:
+      tags:
+        - Notification
+      summary: Сервис уведомлений
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NotifyMessage'
+      responses:
+        '200':
+          description: Успешный ответ
+          content:
+            application/json:
+              schema:
+                type: integer
+        '400':
+          description: Некорректный запрос
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: Внутренняя ошибка сервера
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
 components:
   schemas:
     UserAccount:
@@ -272,6 +305,20 @@ components:
           type: integer
         login:
           type: string
+
+    NotifyMessage:
+      type: object
+      required:
+        - login
+        - message
+        - error
+      properties:
+        login:
+          type: string
+        message:
+          type: string
+        error:
+          type: boolean
 
     ErrorResponse:
       type: object
